fix shadows not showing on chorme explorer

--- a/css/main.css
+++ b/css/main.css
@@ -314,6 +314,7 @@ template {
   margin-bottom: -8vh;
   padding-top: 7%;
   padding-bottom: 7vh;
+  z-index: 10;
   float: left;
   position: relative;
   background-color: #002453;
@@ -835,7 +836,7 @@ template {
   .shadowSobreMi {
     grid-area: sobreMi;
     position: absolute;
-    z-index: -100;
+    z-index: 1;
     content: "";
     background: rgba(0, 0, 0, 0.5);
     left: 5px;
@@ -852,7 +853,8 @@ template {
 @supports (display: grid) {
   .shadowHabilidades {
     position: absolute;
-    z-index: -100;
+    z-index: 1;
+    dex: -100;
     content: "";
     background: rgba(0, 0, 0, 0.5);
     left: -5px;
@@ -869,7 +871,7 @@ template {
   .shadowEducacion {
     grid-area: sobreMi;
     position: absolute;
-    z-index: -100;
+    z-index: 1;
     content: "";
     background: rgba(0, 0, 0, 0.5);
     left: 5px;
@@ -886,7 +888,7 @@ template {
 @supports (display: grid) {
   .shadowExperiencia {
     position: absolute;
-    z-index: -100;
+    z-index: 1;
     content: "";
     background: rgba(0, 0, 0, 0.5);
     left: -5px;
@@ -922,7 +924,7 @@ body {
   min-height: 100%;
   width: auto;
   height: auto;
-  z-index: -100;
+  z-index: -1000;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
 }
@@ -1271,6 +1273,7 @@ nav .tcon-transform + ul {
   background-color: #002453;
   width: 97%;
   height: 110vh;
+  z-index: 10;
   -webkit-clip-path: polygon(0 0, 100% 10%, 100% 90%, 0% 100%);
   clip-path: polygon(0 0, 100% 10%, 100% 90%, 0% 100%);
   position: relative;
@@ -1318,6 +1321,7 @@ nav .tcon-transform + ul {
   float: right;
   position: relative;
   padding-top: 7vh;
+  z-index: 10;
   background-color: #FFFFFF;
   color: #02387a;
   width: 97%;
@@ -1462,6 +1466,7 @@ nav .tcon-transform + ul {
   background-color: #002453;
   width: 97%;
   height: 110vh;
+  z-index: 10;
   -webkit-clip-path: polygon(0 0, 100% 10%, 100% 90%, 0% 100%);
   clip-path: polygon(0 0, 100% 10%, 100% 90%, 0% 100%);
   position: relative;
@@ -1508,6 +1513,7 @@ nav .tcon-transform + ul {
   float: right;
   position: relative;
   padding-top: 7vh;
+  z-index: 10;
   background-color: #FFFFFF;
   color: #02387a;
   width: 97%;
@@ -1830,6 +1836,7 @@ footer .copyright {
       float: right;
       position: relative;
       padding-top: 7vh;
+      z-index: 10;
       background-color: #FFFFFF;
       color: #02387a;
       width: 97%;
@@ -1863,6 +1870,7 @@ footer .copyright {
       background-color: #002453;
       width: 97%;
       height: 110vh;
+      z-index: 10;
       -webkit-clip-path: polygon(0 0, 100% 10%, 100% 90%, 0% 100%);
       clip-path: polygon(0 0, 100% 10%, 100% 90%, 0% 100%);
       padding-top: 7vh;
@@ -1892,7 +1900,7 @@ footer .copyright {
       -ms-grid-column: 3;
       grid-area: experiencia;
       position: absolute;
-      z-index: -1;
+      z-index: 1;
       content: "";
       background: rgba(0, 0, 0, 0.5);
       left: 5px;
@@ -1917,7 +1925,7 @@ footer .copyright {
     }
     body .main .shadowContacto {
       position: absolute;
-      z-index: -100;
+      z-index: 1;
       content: "";
       background: rgba(0, 0, 0, 0.5);
       left: 5px;
