--- a/scss/modulos/_formas.scss
+++ b/scss/modulos/_formas.scss
@@ -12,6 +12,7 @@
     background-color: $verdeApagado;
     width: 97%;
     height: 110vh;
+    z-index: 10;
     -webkit-clip-path: polygon(0 0, 100% 10%, 100% 90%, 0% 100%);
     clip-path: polygon(0 0, 100% 10%, 100% 90%, 0% 100%);
     &:after {
@@ -30,6 +31,7 @@
     float: right;
     position: relative;
     padding-top: 7vh;
+    z-index: 10;
     background-color: $blanco;
     color: $azulOscuro;
     width: 97%;
@@ -60,6 +62,7 @@ clip-path: polygon(50% 0%, 100% 25%, 100% 100%, 50% 100%, 0 100%, 0% 25%);
     margin-bottom: -8vh;
     padding-top: 7%;
     padding-bottom: 7vh;
+    z-index: 10;
     float: left;
     position: relative;
     background-color: $verdeApagado;
