--- a/scss/modulos/_sombras.scss
+++ b/scss/modulos/_sombras.scss
@@ -3,7 +3,7 @@
   @supports (display: grid) {
     grid-area: sobreMi;
     position: absolute;
-    z-index: -100;
+    z-index: 1;
     content: "";
     background: rgba(0, 0, 0, .5);
     left: 5px;
@@ -20,7 +20,8 @@
 .shadowHabilidades {
   @supports (display: grid) {
     position: absolute;
-    z-index: -100;
+    z-index: 1;
+    dex: -100;
     content: "";
     background: rgba(0, 0, 0, .5);
     left: -5px;
@@ -36,7 +37,7 @@
   @supports (display: grid) {
     grid-area: sobreMi;
     position: absolute;
-    z-index: -100;
+    z-index: 1;
     content: "";
     background: rgba(0, 0, 0, .5);
     left: 5px;
@@ -52,7 +53,7 @@
 .shadowExperiencia {
   @supports (display: grid) {
     position: absolute;
-    z-index: -100;
+    z-index: 1;
     content: "";
     background: rgba(0, 0, 0, .5);
     left: -5px;
